--- a/ollama.css
+++ b/ollama.css
@@ -16,7 +16,7 @@ body {
     height: 0;
     border-radius: 10px;
     /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
-    padding: 20px;
+    padding-bottom: 20px;
     box-sizing: border-box;
     /* background: linear-gradient(135deg,#141e3009,#243b5509); */
     overflow-y: scroll;
