--- a/ollama.css
+++ b/ollama.css
@@ -62,7 +62,10 @@ body {
     max-width: 100%;
     overflow-x: scroll;
 }
-
+.think {
+    color: gray;
+    font-size: small;
+}
 #message-form {
     padding: 1rem 0;
     display: flex;
